fix align

--- a/asset/micro.css
+++ b/asset/micro.css
@@ -53,14 +53,14 @@ html {
 }
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 100px;
+    margin-bottom: 120px;
 }
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 100px;
+    height: 120px;
     background-color: #000000;
 }
 
